--- a/lekcji/lesson6B.html
+++ b/lekcji/lesson6B.html
@@ -398,14 +398,16 @@
             <div class="draggable" draggable="true">Do widzenia!</div>
             <div class="draggable" draggable="true">A czy jest kanapka z nutellą?</div>
             <h3>Pani:</h3>
-            <div class="draggable" draggable="true">Dwa złote, ale mam taki ładny niebieski z małym kotkiem. Kosztuje dwa pięćdziesiąt.</div>
+            <div class="draggable" draggable="true">Dwa złote, ale mam taki ładny niebieski z małym kotkiem. Kosztuje
+                dwa pięćdziesiąt.</div>
             <div class="draggable" draggable="true">I trzydzieści groszy reszty. Dziękuję.</div>
             <div class="draggable" draggable="true">Coś jeszcze?</div>
             <div class="draggable" draggable="true">Siedem złotych, siedemdziesiąt groszy.</div>
             <div class="draggable" draggable="true">Niestety, nie ma.</div>
             <div class="draggable" draggable="true">Dzień dobry, tak, jest.</div>
             <div class="draggable" draggable="true">Może chcesz duże? Jesteś taka malutka! Musisz dużo jeść!</div>
-            <div class="draggable" draggable="true">Z żółtym serem czy z białym serem? Ta z żółtym kosztuje trzy złote, a z białym trzy dwadzieścia, ale jest naprawdę dobra i zdrowa.</div>
+            <div class="draggable" draggable="true">Z żółtym serem czy z białym serem? Ta z żółtym kosztuje trzy złote,
+                a z białym trzy dwadzieścia, ale jest naprawdę dobra i zdrowa.</div>
         </div>
         <div>
             <h3>Uporządkowany dialog</h3>
@@ -423,7 +425,8 @@
     <!-- 8 -->
     <h2>8. Co mówi Emma, a co mówi Lukas? Proszę napisać. [506B8]</h2>
     <div class="image" style="width: 70%;margin: 0 auto;">
-        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131242&authkey=%21ABQT3jayGYf9vuk&width=1984&height=908" alt="506B8">
+        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131242&authkey=%21ABQT3jayGYf9vuk&width=1984&height=908"
+            alt="506B8">
     </div>
     <div class="question-set" id="set8">
         <div class="two">
@@ -433,22 +436,19 @@
                     <p class="p20 italic ">a. <span class="italic blue">Czy jest mała pizza?</span></p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">b. <input type="text"
-                            data-answer="Czy jest żółty banan" class="line_3">?</p>
+                    <p class="p20 italic">b. <input type="text" data-answer="Czy jest żółty banan" class="line_3">?</p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">c. <input type="text"
-                            data-answer="Czy jest zimne mleko" class="line_3">?</p>
+                    <p class="p20 italic">c. <input type="text" data-answer="Czy jest zimne mleko" class="line_3">?</p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">d. <input type="text"
-                            data-answer="Czy jest pączyk" class="line_3">?</p>
+                    <p class="p20 italic">d. <input type="text" data-answer="Czy jest pączyk" class="line_3">?</p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">e. <input type="text"
-                            data-answer="Czy jest kanapka z serem" class="line_3">?</p>
+                    <p class="p20 italic">e. <input type="text" data-answer="Czy jest kanapka z serem" class="line_3">?
+                    </p>
                 </div>
-                
+
             </div>
             <div class="dialog italic ">
                 <h3>Lukas</h3>
@@ -456,20 +456,17 @@
                     <p class="p20 italic ">a. <span class="italic blue">Proszę małą pizzę</span>.</p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">b. <input type="text"
-                            data-answer="Proszę żółtego banana" class="line_3"></p>
+                    <p class="p20 italic">b. <input type="text" data-answer="Proszę żółtego banana" class="line_3"></p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">c. <input type="text"
-                            data-answer="Proszę zimne mleko" class="line_3">.</p>
+                    <p class="p20 italic">c. <input type="text" data-answer="Proszę zimne mleko" class="line_3">.</p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">d. <input type="text"
-                            data-answer="Proszę pączyk" class="line_3">.</p>
+                    <p class="p20 italic">d. <input type="text" data-answer="Proszę pączyk" class="line_3">.</p>
                 </div>
                 <div class="colors">
-                    <p class="p20 italic">e. <input type="text"
-                            data-answer="Poproszę kanapkę z serem" class="line_3">.</p>
+                    <p class="p20 italic">e. <input type="text" data-answer="Poproszę kanapkę z serem" class="line_3">.
+                    </p>
                 </div>
             </div>
         </div>
@@ -501,6 +498,143 @@
     <!-- end 8 -->
 
     <!-- 9 -->
+    <h2>9. Proszę uzupełnić dialog. <br> UWAGA NA GRAMATYKĘ! [506B9]</h2>
+    <div class="question-set" id="set9">
+        <div class="two">
+            <div class="dialog italic ">
+                <h3 class="coral">czy jest | złotych | płacę | dla ciebie | groszy | kosztuje | złote | jeszcze | grosze
+                </h3>
+                <div class="colors">
+                    <p class="p20 italic ">Dzień dobry.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic ">Dzień dobry Toru. Co <span class="italic blue">dla ciebie</span>?</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Proszę dużą kanapkę z szynką i mały batonik.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Orzechowy czy toffi.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Może być toffi. A <input type="text" data-answer="czy jest jeszcze"
+                            class="line_2"> jabłko?</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Tak, jest. Wolisz czerwone czy zielone? </p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Proszę zielone. Ile <input type="text" data-answer="kosztuje" class="line_2">
+                        duży sok pomarańczowy?</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">2 <input type="text" data-answer="złote" class="line_2">, 30 <input
+                            type="text" data-answer="groszy" class="line_2">.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">To nie, poproszę mały. I jeszcze mała coca-colę.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Coś <input type="text" data-answer="jeszcze" class="line_2">?</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Nie, to wszystko. Ile <input type="text" data-answer="płacę" class="line_2">?
+                    </p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">8 <input type="text" data-answer="złotych" class="line_2">, 40 <input
+                            type="text" data-answer="groszy" class="line_2">.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic">Dzękuję.</p>
+                </div>
+            </div>
+            <div class="dialog italic ">
+                <div class="colors">
+                    <p class="p20 italic "><span class="soral">PANI:</span> Dzień dobry! Co dla ciebie?</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="coral">TY:</span> <input type="text"
+                            data-answer="Proszę mały batonik" class="line_3"></p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="soral">PANI:</span> Tak, jest.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="coral">TY:</span><input type="text" data-answer="Poproszę jabłko"
+                            class="line_3">.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="soral">PANI:</span> 2 złote, 44 grosze.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="coral">TY:</span><input type="text"
+                            data-answer="Jeszcze poproszę pączyk" class="line_2">.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="soral">PANI:</span> Proszę, coś jeszcze?</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="coral">TY:</span><input type="text"
+                            data-answer="Dziękuję, to wszystko" class="line_2">.</p>
+                </div> <div class="colors">
+                    <p class="p20 italic"><span class="soral">PANI:</span> Proszę, bardzo.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="coral">TY:</span><input type="text"
+                            data-answer="Ile placę" class="line_2">?</p>
+                </div> <div class="colors">
+                <div class="colors">
+                    <p class="p20 italic"><span class="soral">PANI:</span> 4 złote, 64 grosze.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="coral">TY:</span><input type="text"
+                            data-answer="Dziękuję, do widzenia" class="line_2">.</p>
+                </div>
+                <div class="colors">
+                    <p class="p20 italic"><span class="soral">PANI:</span>Do widzenia.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <button onclick="checkAnswers('set9')">Check</button>
+    <button onclick="toggleHints('hints9')">Wskazówka</button>
+    <div id="hints9" style="display: none;">
+        <div class="two">
+            <div>
+                <h5>Dialog 1:</h5>
+                <p>Dzień dobry.</p>
+                <p>Dzień dobry Toru. Co <span class="blue">dla ciebie</span>?</p>
+                <p>Proszę dużą kanapkę z szynką i mały batonik.</p>
+                <p>Orzechowy czy toffi?</p>
+                <p>Może być toffi. A <span class="blue">czy jest</span> jabłko?</p>
+                <p>Tak, jest. Wolisz czerwone czy zielone?</p>
+                <p>Proszę zielone. Ile <span class="blue">kosztuje</span> duży sok pomarańczowy?</p>
+                <p>2 <span class="blue">złote</span>, 30 <span class="blue">groszy</span>.</p>
+                <p>To nie, poproszę mały. I jeszcze mała coca-colę.</p>
+                <p>Coś <span class="blue">jeszcze</span>?</p>
+                <p>Nie, to wszystko. Ile <span class="blue">placę</span>?</p>
+                <p>8 <span class="blue">zlotych</span>, 40 <span class="blue">groszy</span>.</p>
+            </div>
+            <div>
+                <h5>Dialog 2:</h5>
+                <p>Dzień dobry! Co dla ciebie?</p>
+                <p>Proszę mały batonik.</p>
+                <p>Tak, jest.</p>
+                <p>Poproszę jabłko</p>
+                <p>2 złote, 44 grosze.</p>
+                <p>Jeszcze poproszę pączyk</p>
+                <p>Proszę, coś jeszcze?</p>
+                <p>Dziękuję, to wszystko</p>
+                <p>Proszę bardzo.</p>
+                <p>Ile placę?</p>
+                <p>4 złote, 64 grosze.</p>
+                <p>Dziękuję, do widzenia</p>
+                <p>Do widzenia.</p>
+            </div>
+        </div>ř
+    </div>
 
 
 
