--- a/lekcji/lesson1.html
+++ b/lekcji/lesson1.html
@@ -38,6 +38,14 @@
         <main class="main">
             <h1>Krok po kroku - junior 1 - 2</h1>
             <h2>A - Co to jest? Kto to jest?</h2>
+            <!-- rymowanki -->
+             <h2>Rymowanki</h2>
+             <h3>Poszła Tola na wagary</h3>
+             <audio src="./rymowanki/poszla-tola-na-wagary.mp3" controls>tolaNaWagary</audio>
+             <p class="p20">Poszła Tola na wagary</p>
+             <p class="p20">wzięła z sobą plecak stary.</p>
+             <p class="p20">A w plecaku dziura była,</p>
+             <p class="p20">prawie wszystko pogubiła.</p>
             <!-- 1 -->
             <h3>Co tojest? [502A1]</h3>
             <div class="image">
