--- a/lekcji/lesson2C.html
+++ b/lekcji/lesson2C.html
@@ -6,85 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson №2C</title>
     <link rel="stylesheet" href="../style.css">
-    <!-- <style>
-        .correct {
-            background-color: green;
-            color: white;
-        }
-
-        .incorrect {
-            background-color: red;
-            color: white;
-        }
-
-        .options {
-            display: flex;
-            gap: -1px;
-            /* Разрыв между вариантами */
-            font-size: 24px;
-        }
-
-        .option {
-            cursor: pointer;
-        }
-
-        .selected {
-            text-decoration: underline;
-        }
-
-        .question {
-            margin-top: -5%;
-        }
-
-        .questions {
-            margin-bottom: 5%;
-        }
-
-        input {
-            font-size: 24px;
-            /* Увеличенный размер шрифта */
-            width: 40px;
-            /* Ширина поля ввода */
-            text-align: center;
-            /* Текст по центру */
-        }
-
-        .colorB {
-            width: 100px;
-            height: 35px;
-            background-color: blue;
-        }
-
-        .colorGr {
-            width: 100px;
-            height: 35px;
-            background-color: green;
-        }
-
-        .colorBr {
-            width: 100px;
-            height: 35px;
-            background-color: rgb(74, 30, 30);
-        }
-
-        .colorR {
-            width: 100px;
-            height: 35px;
-            background-color: red;
-        }
-
-        .colorYe {
-            width: 100px;
-            height: 35px;
-            background-color: yellow;
-        }
-
-        .colorPom {
-            width: 100px;
-            height: 35px;
-            background-color: orange;
-        }
-    </style> -->
+   
 </head>
 
 <body>
@@ -104,6 +26,14 @@
             <div class="video">
                 <iframe src="https://quizlet.com/934715228/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
             </div>
+             <!-- rymowanki -->
+             <h2>Rymowanki</h2>
+             <h3>Woda z kranu</h3>
+             <audio src="./rymowanki/woda-z-kranu.mp3" controls>tolaNaWagary</audio>
+             <p class="p20">Woda z kranu: kap, kap, kap.</p>
+             <p class="p20">Konik człapie: człap, człap, człap.</p>
+             <p class="p20">Mucha bzyczy: bzy, bzy, bzy,</p>
+             <p class="p20">a wąż syczy: sy, sy, sy.</p>
             <!-- 1 -->
             <h2>Dialog 1</h2>
             <!-- 1 - 2-->
