--- a/lekcji/lesson2D.html
+++ b/lekcji/lesson2D.html
@@ -33,6 +33,16 @@
             <!-- nowy słowa-->
             <a href="https://quizlet.com/pl/931437045/02d-stare-nowe-kolorowe-flash-cards/?i=4wzil5&x=1qqt"
                 target="_blank">NOWY SŁOWA >>></a>
+             <!-- rymowanki -->
+             <h2>Rymowanki</h2>
+             <h3>Idzie pani stuk, stuk</h3>
+             <audio src="./rymowanki/idzie_pani.mp3" controls>tolaNaWagary</audio>
+             <p class="p20">Idzie pani stuk, stuk</p>
+             <p class="p20">Dziadek z laską puk, puk.</p>
+             <p class="p20">Dziecko skacze hop, hop,</p>
+             <p class="p20">piłkę kopie kop, kop.</p>
+             <p class="p20">Deszcz ze śniegiem chlup, chlup.</p>
+             <p class="p20">A grad w szyby łup, łup.</p>
             <!-- 1 -->
             <h2>Dialog 1</h2>
             <!-- 1 -->
