--- a/lekcji/lesson2B.html
+++ b/lekcji/lesson2B.html
@@ -68,6 +68,15 @@
             <div class="video">
                 <iframe src="https://quizlet.com/934713689/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
             </div>
+            <!-- rymowanki -->
+            <h2>Rymowanki</h2>
+            <h3>Pada deszcz</h3>
+            <audio src="./rymowanki/pada-deszcz.mp3" controls>tolaNaWagary</audio>
+            <p class="p20">Pada deszcz, pada deszcz,</p>
+            <p class="p20">deszczyk mokry jest.</p>
+            <p class="p20">Kapie z nieba kap-kap-kap,
+            </p>
+            <p class="p20">jeśli możesz to go złap!</p>
             <!-- 1 -->
             <h2>Prosze uzupetnic.</h2>
             <div class="video">
