--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                      <li class="liLesson"><a href="./lekcji/lesson6Powtorzenie.html">6 - Powtórzenie </a><input type="checkbox"
                              class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson5Plus.html">6 - Plus - dia ambitnych <span class="red"> biernik - utrwalenie</span> <br> prezentacja polskich artystów i sportowców </a><input
+                     <li class="liLesson"><a href="./lekcji/lesson6plus.html">6 - Plus - dia ambitnych <span class="red"> biernik - utrwalenie</span> <br> prezentacja polskich artystów i sportowców </a><input
                              type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
