--- a/index.html
+++ b/index.html
@@ -135,6 +135,27 @@
                              type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
+                 <!-- 7 -->
+                 <h2>7</h2>
+                 <ul class="list">
+                     <li class="liLesson"><a href="./lekcji/lesson7A.html">7-A - Cztery pory roku <span
+                                 class="red"> - kiedy: wiosna, latem...</span> <br>Jaka jest twoja ulubiona pora roku? Jaka jest pogoda?</a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson6B.html">7-B - Ale masz fajną bluzę!<span class="red">nosié
+                        +biernik</span> <br>Co zwykle nosisz?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href=".//lekcji/lesson6C.html">7-C - Nie mam się w co ubrac! <span class="red">  narzednik .I mn.; mie na sobie +biernik</span> <br> 
+                        Co masz na sobie?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson6D.html">7-D - „Mój sąsiad jest wampirem" <span class="red">koniugacje, mianownik, narzednik, biernik</span> <br> opis osoby; pytania</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson6Powtorzenie.html">7 - Powtórzenie </a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson6plus.html">8 - Plus - dia ambitnych <span class="red"> narzednik .Imn, - utrwalenie</span> <br> zakupy w sklepie z ubraniami</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                 </ul>
             </div>
         </main>
     </div>
