--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                  class="red"> - kiedy: wiosna, latem...</span> <br>Jaka jest twoja ulubiona pora roku? Jaka jest pogoda?</a><input type="checkbox"
                              class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson6B.html">7-B - Ale masz fajną bluzę!<span class="red">nosié
+                     <li class="liLesson"><a href="./lekcji/lesson7B.html">7-B - Ale masz fajną bluzę!<span class="red">nosić
                         +biernik</span> <br>Co zwykle nosisz?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href=".//lekcji/lesson6C.html">7-C - Nie mam się w co ubrac! <span class="red">  narzednik .I mn.; mie na sobie +biernik</span> <br> 
