--- a/lekcji/lesson7B.html
+++ b/lekcji/lesson7B.html
@@ -502,67 +502,103 @@
                     </tr>
                     <tr>
                         <td>II</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="luty" class="line_1"></td>
+                        <td><input type="text" data-answer="w lutym" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>III</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="marzec" class="line_1"></td>
+                        <td><input type="text" data-answer="w marcu" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>IV</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="kwiecień" class="line_1"></td>
+                        <td><input type="text" data-answer="w kwietniu" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>V</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="maj" class="line_1"></td>
+                        <td><input type="text" data-answer="w maju" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>VI</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="czerwiec" class="line_1"></td>
+                        <td><input type="text" data-answer="w czerwcu" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>VII</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="lipiec" class="line_1"></td>
+                        <td><input type="text" data-answer="w lipcu" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>VIII</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="sierpień" class="line_1"></td>
+                        <td><input type="text" data-answer="w sierpniu" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>IX</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td> we <input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="wrzesień" class="line_1"></td>
+                        <td> we <input type="text" data-answer="wrześniu" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>X</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="październik" class="line_1"></td>
+                        <td><input type="text" data-answer="w październiku" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>XI</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="listopad" class="line_1"></td>
+                        <td><input type="text" data-answer="w listopadzie" class="line_1"></td>
                     </tr>
                     <tr>
                         <td>XII</td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
-                        <td><input type="text" data-answer="latem" class="line_1"></td>
+                        <td><input type="text" data-answer="grudzień" class="line_1"></td>
+                        <td><input type="text" data-answer="w grudniu" class="line_1"></td>
                     </tr>
                 </table>
-                <button onclick="checkAnswers('set3')">Check</button>
-                <button onclick="toggleHints('hints3')">Wskazówka</button>
-                <div id="hints3" style="display: none;">
-                        
+                <button onclick="checkAnswers('set12')">Check</button>
+                <button onclick="toggleHints('hints12')">Wskazówka</button>
+                <div id="hints12" style="display: none;">
+                    <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfUDOxQ1uuq0YTbS5Q?embed=1&width=1218&height=834" alt="507B12" style="width: 80%;">
                 </div>
             </div>
         <!-- end 12 -->
+         <!-- 13 -->
+        <h2>13. Kto to jest? Proszę</h2>
+            <h3 class="coral">Superman | Hobbit | Święty Mikołaj | Drakula | Harry Potter</h3>
+        <div class="twoGrid" style="grid-template-columns: 1fr 2fr;">
+            <div class="image">
+                <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfUE5iqLzxjvBgaS6w?embed=1&width=1494&height=1282" alt="507B13" style="width: 90%;">
+            </div>
+            <div>
+                <div class="question-set" id="set13">
+                    <div class="dialog italic ">
+                        <div class="colors">
+                            <p class="p20 italic "><input type="text" data-answer="Drakula" class="line_1"> Zwykle nosi długie, eleganckie, czarne spodnie i białą bluzkę. Na nogach ma czarne buty. Lubi czerwony kolor, dlatego nosi czerwoną kamizelkę. Nosi też długi czarny płaszcz.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p20"><input type="text" data-answer="Harry Potter" class="line_1"> Codziennie nosi białą bluzkę z eleganckim krawatem. Ma czarne długie spodnie i czarne buty. Nosi też szary sweter. Ma okulary i dlatego wygląda na bardzo inteligentnego chłopca.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p20"><input type="text" data-answer="Święty Mikołaj:" class="line_1"> Zawsze nosi czerwone spodnie i czerwoną kurtkę. Na głowie ma ciepłą czerwoną czapkę. Na nogach nosi czarne wysokie buty. Dużo pracuje zimą, dlatego nosi grube rękawiczki.</p>
+                        </div>
+                    </div>
+                    <button onclick="checkAnswers('set13')">Check</button>
+                    <button onclick="toggleHints('hints13')">Wskazówka</button>
+                    <div id="hints13" style="display: none;">
+                        <p>1. Drakula: “Zwykle nosi długie, eleganckie, czarne spodnie i białą bluzkę. Na nogach ma czarne buty. Lubi czerwony kolor, dlatego nosi czerwoną kamizelkę. Nosi też długi czarny płaszcz.”</p>
+                        <p>2. Harry Potter: “Codziennie nosi białą bluzkę z eleganckim krawatem. Ma czarne długie spodnie i czarne buty. Nosi też szary sweter. Ma okulary i dlatego wygląda na bardzo inteligentnego chłopca.”</p>
+                        <p>3. Święty Mikołaj: “Zawsze nosi czerwone spodnie i czerwoną kurtkę. Na głowie ma ciepłą czerwoną czapkę. Na nogach nosi czarne wysokie buty. Dużo pracuje zimą, dlatego nosi grube rękawiczki.”</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+        <!-- end 13 -->
 
 
 
