--- a/index.html
+++ b/index.html
@@ -156,6 +156,29 @@
                      <li class="liLesson"><a href="./lekcji/lesson7plus.html">7 - Plus - dia ambitnych <span class="red"> narzednik .Imn, - utrwalenie</span> <br> zakupy w sklepie z ubraniami</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
+                 <!-- 8 -->
+                 <h2>8</h2>
+                 <ul class="list">
+                     <li class="liLesson"><a href="./lekcji/lesson8A.html">8-A - Co jesz na śniadanie?<span
+                                 class="red"> - czasowniki: jesć,
+                                 pić, woleć</span> <br>Co jesz na sniadanie? Z czym jesz...?</a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson7B.html">8-B - Nie lubię tłustej kiełbasy!<span
+                        class="red"> - dopełniacz I.poj.</span> <br>Czego nie lubisz jeść?</a><input type="checkbox"
+                    class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href=".//lekcji/lesson7C.html">8-C - Nie cierpię krupniku! <span class="red">  dopetłniacz I.poj. - cd.; bez + dopełniacz</span> <br> 
+                        stołówka szkolna; wyrażanie preferencji</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson7D.html">8-D - Czego szukasz?<span class="red">szukać, potrzebować, bać się + dopełniacz</span> <br> opisywanie osób; Czego potrzebujesz ...?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson7Powtorzenie.html">8 - Powtórzenie </a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson7plus.html">8 - Plus - dia ambitnych <span class="red"> narzednik .Imn, - utrwalenie</span> <br> gra miejska</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                 </ul>
             </div>
         </main>
     </div>
