--- a/lekcji/lesson7plus.html
+++ b/lekcji/lesson7plus.html
@@ -27,7 +27,7 @@
             <div class="image">
                 <h2>Przypadki w języku polskim</h2>
                 <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfUFFqtH22egcpM3XA?embed=1&width=946&height=952"
-                    alt="przypadki" style="width: 60%;">
+                    alt="przypadki" style="width: 40%;">
             </div>
 
             <!-- 1-2 -->
@@ -233,6 +233,74 @@
             <!-- end 4 -->
              <!-- 5 -->
             <h2>5. Co  nie pasuje? [507E5]</h2>
+            <div class="questions">
+                <div class="question" data-correct="1">
+                    <div class="displayFlex italic">
+                        <p class="p22">a. ubranie na głowę </p>
+                        <p class="p18 option" data-index="0">&nbsp;kapelusz | </p>
+                        <p class="p18 option" data-index="1" style="text-decoration: underline;">&nbsp;rękawiczka</p>
+                        <p class="p18 option" data-index="2">&nbsp;czapka </p>
+                    </div>
+                </div>
+                <div class="question" data-correct="2" style="margin-top: -1%;">
+                    <div class="displayFlex italic">
+                        <p class="p22">b. zawsze mamy parę (1+1)</p>
+                        <p class="p18 option" data-index="0">&nbsp;rękawiczki | </p>
+                        <p class="p18 option" data-index="1">&nbsp;slarpetki |</p>
+                        <p class="p18 option" data-index="2">&nbsp;rajstopy</p>
+                    </div>
+                </div>
+                <div class="question" data-correct="0" style="margin-top: -1%;">
+                    <div class="displayFlex italic">
+                        <p class="p22">c. ubranie na basen</p>
+                        <p class="p18 option" data-index="0">&nbsp;pasek | </p>
+                        <p class="p18 option" data-index="1">&nbsp;kąpielówki |</p>
+                        <p class="p18 option" data-index="2">&nbsp;kostium kąpielowy</p>
+                    </div>
+                </div>
+                <div class="question" data-correct="0" style="margin-top: -1%;">
+                    <div class="displayFlex italic">
+                        <p class="p22">d. ubranie na nogi</p>
+                        <p class="p18 option" data-index="0">&nbsp;szalik | </p>
+                        <p class="p18 option" data-index="1">&nbsp;legginsy |</p>
+                        <p class="p18 option" data-index="2">&nbsp;rajstopy</p>
+                    </div>
+                </div>
+                <div class="question" data-correct="2" style="margin-top: -1%;">
+                    <div class="displayFlex italic">
+                        <p class="p22">e. może być z guzikami</p>
+                        <p class="p18 option" data-index="0">&nbsp;koszula | </p>
+                        <p class="p18 option" data-index="1">&nbsp;piżama |</p>
+                        <p class="p18 option" data-index="2">&nbsp;sandały</p>
+                    </div>
+                </div>
+                <div class="question" data-correct="1" style="margin-top: -1%;">
+                    <div class="displayFlex italic">
+                        <p class="p22">f. noszą to dziewczyny</p>
+                        <p class="p18 option" data-index="0">&nbsp;kostium kąpielowy | </p>
+                        <p class="p18 option" data-index="1">&nbsp;kąpielówki |</p>
+                        <p class="p18 option" data-index="2">&nbsp;sukienka</p>
+                    </div>
+                </div>
+                <div class="question" data-correct="2" style="margin-top: -1%;">
+                    <div class="displayFlex italic">
+                        <p class="p22">g. jest bardzo eleganckie</p>
+                        <p class="p18 option" data-index="0">&nbsp;garnitur | </p>
+                        <p class="p18 option" data-index="1">&nbsp;kapelusz |</p>
+                        <p class="p18 option" data-index="2">&nbsp;dres</p>
+                    </div>
+                </div>
+                <div class="question" data-correct="1" style="margin-top: -1%;">
+                    <div class="displayFlex italic">
+                        <p class="p22">h. dodatek, coś ekstra do...</p>
+                        <p class="p18 option" data-index="0">&nbsp;pasek | </p>
+                        <p class="p18 option" data-index="1">&nbsp;sukienka |</p>
+                        <p class="p18 option" data-index="2">&nbsp;chustka</p>
+                    </div>
+                </div>
+                <button class="checkAnswers">Sprawdź</button>
+                <p class="result"></p>
+            </div>
 
              <!--  end 5 -->
 
