--- a/lekcji/lesson8C.html
+++ b/lekcji/lesson8C.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson №8A</title>
+    <title>Lesson №8C</title>
     <link rel="stylesheet" href="../style.css">
 
 </head>
@@ -24,6 +24,11 @@
             <a href="https://quizlet.com/pl/938886869/krok-po-kroku-junior-1-8c-flash-cards/?i=4wzil5&x=1jqt"
                 target="_blank">NOWY SŁOWA >>></a>
             <!-- start -->
+            <div class="image">
+                <h2>Przypadki w języku polskim</h2>
+                <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfUFFqtH22egcpM3XA?embed=1&width=946&height=952"
+                    alt="przypadki" style="width: 40%;">
+            </div>
             <!-- 2 -->
             <h2>2. Proszę posłuchać i uzupelnić jadłospis. [508C2]</h2>
             <audio src="./audio/184.mp3" controls>184</audio>
