--- a/lekcji/lesson8D.html
+++ b/lekcji/lesson8D.html
@@ -232,13 +232,22 @@
                     </div>
                 </div>
             </div>
-
-
-
             <!-- end 5 -->
 
-            <!-- end 9 -->
-
+            <!-- 6 -->
+             <div class="two">
+                <div class="image" style="width: 130%;">
+                    <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfYChuebPciUJWApTQ?embed=1&width=1410&height=1156" alt="508D6-1">
+                </div>
+                <div class="image">
+                    <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfYDTu0yUmhaq4rC7A?embed=1&width=774&height=1750" alt="508D6-2">
+                </div>
+             </div>
+            <!-- end 6 -->
+             <!-- 7 -->
+             <div class="image">
+                <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfYEE5sXxpkXrH905A?embed=1&width=1942&height=822" alt="508D7">
+             </div>
 
 
 
